# mat-graph

./: .gitignore  LICENSE  README.md  pyproject.toml
crystallographic_graph/: __init__.py  data.py  graph.py  meshgrid.py  utils.py
crystallographic_graph/builder/: __init__.py  neighbours_graph.py  triplets.py
tests/: test_make_graph.py
